[tool.poetry]
name = "cms-drg-grouper-interface"
version = "0.1.0"
description = ""
authors = ["Jonathan Gupton <Jonathan.Gupton@gmail.com>"]
readme = "README.md"
packages = [{include = "cms_drg_grouper_interface", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
mypy = "^0.971"
tox = "^3.25.1"
isort = "^5.10.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["isort", "test"]

[tool.drg-grouper]
grouper = 'CMS_MCE_GROUPER'  # At present the CMS_MCE_GROUPER is the only supported grouper
grouper_path = 'C:\Program Files\MSG MCE Software I10'
delete_input_file = true
delete_output_file = true
input_filepath = 'input.txt'
output_filepath = 'output.txt'

